# qrcode-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: CI.yml
__test__/: index.spec.ts
example/: tsconfig.json
lib/: README.md  index.ts  package.json
native/: lib.rs
src/: lib.rs
test/: index.ts  package-lock.json  package.json
