
[package]
authors = ["AaronKing <aaron.cmfor@gmail.com>"]
edition = "2021"
name = "qrcode_rs"
version = "0.1.8"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.9"
napi = "3.0.0"
napi-derive = "3.0.0"
qrcode = "0.14.1"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1           # Single codegen unit for better optimization
lto = "fat"                 # Full LTO for maximum speed
opt-level = 3               # Maximum optimization
overflow-checks = false     # Disable overflow checks for speed
panic = "abort"             # Smaller and faster panic handler
strip = "symbols"           # Strip symbols to reduce binary size
incremental = false         # Disable incremental compilation for smaller binaries

[profile.release.package."*"]
opt-level = 3               # Optimize all dependencies too
codegen-units = 1           # Apply single codegen unit to dependencies too

[profile.dev]
opt-level = 0               # No optimization for faster compilation
debug = true                # Include debug info
incremental = true          # Enable incremental compilation for faster rebuilds
